# ai-business-os

./: .gitignore  CHANGELOG.md  Makefile  README.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core_schema.py  0002_bank_transactions.py  0003_kb_memory.py  0004_competitor_intel.py  0005_lead_sources.py
apps/api/scripts/: gmail_authorize.py
apps/api/src/: __init__.py  config.py  create_api_key.py  logging_setup.py  main.py  seed.py  worker.py
apps/api/src/application/: __init__.py  bank_transactions.py  competitor_intel.py  competitor_report.py  errors.py  kb.py  lead_discovery.py  lead_maintenance.py  leads.py  memory.py  ports.py  renovation.py  repositories.py  snapshot.py
apps/api/src/application/agents/: __init__.py  analytics.py  content.py  customer_discovery.py  marketing.py  memory.py  planner.py  planning.py  ports.py  qa.py  rubric.py  seo.py  social.py
apps/api/src/domain/: __init__.py  bank_alerts.py  change_heuristics.py  chunking.py  cursor.py  diffing.py  draw_matching.py  draws.py  errors.py  fusion.py  html_text.py  lead_signals.py  leads.py  money.py  rss_text.py
apps/api/src/infrastructure/: __init__.py  adapters.py  agent_runtime.py  audit.py  change_analyst.py  db.py  embeddings.py  gmail.py  keyword_index.py  line.py  llm.py  llm_client.py  metrics.py  models.py  object_storage.py  parsing.py  pii.py  prompts.py  repositories.py  security.py  vector_index.py
apps/api/src/interfaces/: __init__.py  dependencies.py  middleware.py  problems.py  schemas.py
apps/api/src/interfaces/routers/: __init__.py  agents.py  competitors.py  health.py  jobs.py  kb.py  leads.py  memory.py  metrics.py  renovation.py  reports.py  sources.py
apps/api/tests/: fakes.py
apps/api/tests/integration/: conftest.py  test_api_flow.py  test_m1_flow.py  test_m2_flow.py  test_m3_flow.py  test_m4_flow.py  test_m5_flow.py
apps/api/tests/unit/: test_agent_budget.py  test_agents_m4.py  test_agents_m6.py  test_agents_trigger.py  test_auth_mode.py  test_bank_alerts.py  test_change_analyst.py  test_change_heuristics.py  test_chunking.py  test_competitor_report.py  test_competitor_sweep.py  test_cursor.py  test_draw_matching.py  test_draws.py  test_fusion.py  test_html_text.py  test_kb.py  test_lead_discovery.py  test_lead_maintenance.py  test_lead_signals.py  test_leads.py  test_llm_client.py  test_marketing.py  test_memory.py  test_money.py  test_parsing.py  test_pii.py  test_planning_rules.py  test_prompts.py  test_qa_rubric.py  test_rss_text.py  test_snapshot.py
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: layout.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/(dashboard)/agents/: page.tsx
apps/web/app/(dashboard)/competitors/: page.tsx
apps/web/app/(dashboard)/kb/: page.tsx
apps/web/app/(dashboard)/leads/: page.tsx
apps/web/app/(dashboard)/leads/[id]/: page.tsx
apps/web/app/(dashboard)/payments/: page.tsx
apps/web/app/(dashboard)/renovation/: page.tsx
apps/web/app/(dashboard)/reports/: page.tsx
apps/web/app/(dashboard)/settings/: page.tsx
apps/web/components/: BarList.tsx  DataTable.tsx  Donut.tsx  EmptyState.tsx  HeroSignalCard.tsx  PageHeader.tsx  Sidebar.tsx  StatCard.tsx  Topbar.tsx
apps/web/components/agents/: AgentTriggerCard.tsx
apps/web/components/competitors/: ChangeFeed.tsx  CheckButton.tsx  CompetitorActiveToggle.tsx  CompetitorCreateForm.tsx  SeverityFilterChips.tsx  SourceCreateForm.tsx  SourceDeleteButton.tsx  SourceEnabledToggle.tsx  SweepButton.tsx  WeeklyReportButton.tsx
apps/web/components/kb/: KbRefreshButton.tsx  KbSearch.tsx  KbUploadForm.tsx
apps/web/components/leads/: CopySuggestionButton.tsx  LeadAdvanceButtons.tsx  LeadFilters.tsx  LeadSourceCollectButton.tsx  LeadSourceCreateForm.tsx  LeadSourceDeleteButton.tsx  LeadSourceToggle.tsx
apps/web/components/payments/: BankAlertIngestForm.tsx  DailySnapshotButton.tsx  TransactionActions.tsx
apps/web/components/renovation/: DrawCreateForm.tsx  MilestoneAdvanceButton.tsx  MilestoneCreateForm.tsx  PayDrawButton.tsx  QuotationCreateForm.tsx
apps/web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  FormError.tsx  Input.tsx  Progress.tsx
apps/web/lib/: api.ts  format.ts  i18n.ts  types.ts  useApiAction.ts
docs/: ARCHITECTURE.md  security.md  tech-debt.md
docs/adr/: 0001-single-vps-docker-compose.md  0002-meilisearch-over-elasticsearch.md  0003-celery-over-temporal.md  0004-custom-agent-runtime.md  0005-auth-strategy.md  0006-api-first-data-collection.md  0007-llm-provider-strategy.md  0008-glitchtip-over-sentry.md  0009-minio-over-cloud-s3.md  README.md
docs/runbooks/: deploy.md  facebook-group-setup.md  first-deploy.md  gmail-line-setup.md  lead-sources.md  marketing-content.md  restore.md
infra/backup/: backup.sh
infra/compose/: .env.example  Caddyfile  docker-compose.yml  prometheus.yml
infra/compose/initdb/: 01-glitchtip.sql
infra/terraform/: cloud-init.yaml.tftpl  main.tf  outputs.tf  variables.tf
mcp-servers/: README.md
mcp-servers/knowledge-base/: README.md  pyproject.toml
mcp-servers/knowledge-base/src/mcp_knowledge_base/: __init__.py  server.py
mcp-servers/memory/: README.md  pyproject.toml
mcp-servers/memory/src/mcp_memory/: __init__.py  server.py
scripts/: bootstrap.sh  gen-secrets.sh  smoke.sh
services/collectors/: pyproject.toml
services/collectors/src/collectors/: __init__.py  base.py  compliance.py  reddit.py  rss.py
services/collectors/tests/: test_compliance.py  test_reddit.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/orchestrator/: __init__.py  budget.py  contract.py  router.py  runner.py
services/orchestrator/tests/: test_budget.py  test_runner.py
