[project]
name = "aibos-api"
version = "0.1.0"
description = "AI Business OS - core FastAPI service (REST API, auth, business logic)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "celery[redis]>=5.4",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "boto3>=1.35",
    "qdrant-client>=1.12",
    # M4: prompt templates (packages/prompts *.j2) render via Jinja2; a core
    # dep (not optional) because the ChangeAnalyst prompt path uses it too.
    "jinja2>=3.1",
]

# M4 NOTE: the agent runtime (src/infrastructure/agent_runtime.py and
# src/application/agents/) additionally requires the in-repo orchestrator
# package (services/orchestrator). It is installed in the API image by the
# integrator's Dockerfile; for local dev/tests use
#   PYTHONPATH=../../services/orchestrator/src
# Modules that need it import it lazily or are test-skipped when absent, so
# the API itself boots without it (agent tasks then report failed status).

# Optional extras (M2). `parsing` is optional rather than core because
# pdfplumber/pdf2image drag in heavy binary deps (pypdfium2, poppler) that the
# API container installs explicitly but slim local environments may skip —
# src/infrastructure/parsing.py degrades with a clear error when absent.
# `ml` (sentence-transformers -> torch, ~GBs) is gated by the Dockerfile's
# INSTALL_ML arg; without it the embedder reports is_available=False and the
# KB degrades to keyword-only search (NFR-1).
[project.optional-dependencies]
ml = ["sentence-transformers>=3.2"]
parsing = ["pdfplumber>=0.11", "pytesseract>=0.3.13", "pdf2image>=1.17"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8,<0.9",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: DB-backed tests; require DATABASE_URL pointing at a live PostgreSQL",
]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
