[project]
name = "mcp-knowledge-base"
version = "0.1.0"
description = "MCP server exposing AI Business OS knowledge-base search and ingestion"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
mcp-knowledge-base = "mcp_knowledge_base.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_knowledge_base"]
