[project]
name = "mcp-memory"
version = "0.1.0"
description = "MCP server exposing AI Business OS long-term memory"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
mcp-memory = "mcp_memory.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_memory"]
