[project]
name = "aibos-orchestrator"
version = "0.1.0"
description = "Agent runtime for AI Business OS — budgets, tracing, tier routing"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.55",
]

[dependency-groups]
dev = ["pytest>=8.3", "ruff>=0.8"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator"]
